--- a/SimpleBudget/SimpleBudget/SimpleBudget.App.csproj
+++ b/SimpleBudget/SimpleBudget/SimpleBudget.App.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{0154D1A6-0488-4BAE-8798-20384B76CDE7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SimpleBudget</RootNamespace>
+    <RootNamespace>SimpleBudget.App</RootNamespace>
     <AssemblyName>SimpleBudget</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
