--- a/SimpleBudget/SimpleBudget.App/SimpleBudget.App.csproj
+++ b/SimpleBudget/SimpleBudget.App/SimpleBudget.App.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Extensions\ListExtensions.cs" />
     <Compile Include="Services\IRecordService.cs" />
     <Compile Include="Services\RecordService.cs" />
+    <Compile Include="ViewModelLocator.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
